Fix the Xassembler and Xpreprocessor options, which have never worked right. PR driver/21112 * gcc.c (process_command): In the second argv scan loop, ignore Xassembler and Xpreprocessor, along with their argument.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@99221 138bc75d-0d04-0410-961f-82ee72b054a4